updated to hello

--- a/_posts/2017-10-12-a-vision.md
+++ b/_posts/2017-10-12-a-vision.md
@@ -37,4 +37,4 @@ We think it’s special, but it craves feedback from the people who know this co
 
 We’re hosting a [free session on Friday, October 27th](https://www.eventbrite.com/e/designing-the-ideal-design-shop-tickets-38734833931) as part of AIGA’s Design Week here in Chicago to discuss and challenge what we’ve learned thus far. We’d love for you to join us for breakfast and a conversation around how to spread design literacy in a new way.
 
-In the meantime, check out our [manifesto](https://docs.google.com/document/d/10QOmwrdezX-3n9c9A3mD8XrOW1F3fyoTFgVrXsv-I1s) and co-op [roadmap](https://trello.com/b/PoGlOFGm/roadmap), which are purposefully transparent and available to the public for feedback. If we won’t see you on the 27th, please feel free to shoot us a note at [jason@designcoop.co](mailto: jason@designcoop.co) with questions or feedback.  We’re looking forward to your thoughts either way.
+In the meantime, check out our [manifesto](https://docs.google.com/document/d/10QOmwrdezX-3n9c9A3mD8XrOW1F3fyoTFgVrXsv-I1s) and co-op [roadmap](https://trello.com/b/PoGlOFGm/roadmap), which are purposefully transparent and available to the public for feedback. If we won’t see you on the 27th, please feel free to shoot us a note at [hello@designcoop.co](mailto: hello@designcoop.co) with questions or feedback.  We’re looking forward to your thoughts either way.
