updated picture and a few words in the post.

--- a/_posts/2017-10-12-a-vision.md
+++ b/_posts/2017-10-12-a-vision.md
@@ -1,7 +1,7 @@
 ---
 title: A vision for the future of work
 author: the Design Cooperative
-lead-image-url: /assets/images/posts/questions.png
+lead-image-url: /assets/images/posts/questions_10_2017.jpg
 lead-image-caption: We begin with questions.
 ---
 
@@ -9,7 +9,7 @@ lead-image-caption: We begin with questions.
 
 how to insert an image:
 
-{% include image.html url="/assets/images/posts/questions.png" caption="We begin with questions." %}
+{% include image.html url="/assets/images/posts/questions_10_2017.jpg" caption="We begin with questions." %}
 
 -->
 
@@ -22,7 +22,7 @@ Our idea is a lil’ something called the Design Cooperative. And we’re driven
 - Everyone is capable of learning and practicing design skills, but design education isn’t accessible or affordable. For many, it’s not effective at helping them find a job they want.
 - Diverse teams create better solutions, but design talent is mostly white and male.
 - Design education is great at fundamentals, but not great at application. Experience is the best instructor.
-- The creative work of the 21st century needs to align a paycheck with the motivation of a job well done.
+- The creative work of the 21st century needs to align a paycheck with a purpose greater than the motivation of a job well done.
 - Everyone (brands, companies, nonprofits, people) wants authentic, purpose-driven communication, clear-eyed design work, and flawless execution. Agency models are increasingly misaligned with their customers in a shifting marketplace, yet replicating these talents in house is expensive and difficult.
 
 We think that in order to change the face of design education and reinvigorate the practice, the Design Cooperative should sit at the intersection of a school, a studio and a movement. But, we also feel strongly that it has to be self-sustaining. 
