--- a/_posts/2017-10-12-a-vision.md
+++ b/_posts/2017-10-12-a-vision.md
@@ -1,7 +1,7 @@
 ---
 title: A vision for the future of work
 author: the Design Cooperative
-lead-image-url: /assets/images/posts/questions_10_2017.jpg
+lead-image-url: /assets/images/posts/questions_10_2017.png
 lead-image-caption: We begin with questions.
 ---
 
